out/production/My Development Org/objects/bvd_connector__Matching_Columns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bvd_connector__Column__c</fullName>
        <label>Column</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Order__c</fullName>
        <description>Order of column</description>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Matching Columns</label>
</CustomObject>